# paint-

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  plan.md  prd.md
.cache/clangd/index/: config.hpp.BFA5054D82DFC6DF.idx  main.cpp.1A200738536BA0EF.idx
include/: config.hpp
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: main.cpp
